@@ -217,13 +217,13 @@ z80MightRead(const lineNode *pl, const char *what)
   if(strncmp(pl->line, "call\t", 5) == 0 && strchr(pl->line, ',') == 0)
     return FALSE;
 
-  if(ISINST(pl->line, "ret") && !isReturned(what))
-    return FALSE;
+  if(ISINST(pl->line, "ret"))
+    return(isReturned(what));
 
-  if(strcmp(pl->line, "ex\t(sp),hl") == 0 && strchr(what, 'h') == 0 && strchr(what, 'l') == 0)
-    return FALSE;
-  if(strcmp(pl->line, "ex\tde,hl") == 0 && strchr(what, 'h') == 0 && strchr(what, 'l') == 0 && strchr(what, 'd') == 0 && strchr(what, 'e') == 0)
-    return FALSE;
+  if(!strcmp(pl->line, "ex\t(sp), hl") || !strcmp(pl->line, "ex\t(sp),hl"))
+    return(!strchr(what, 'h') || !strchr(what, 'l'));
+  if(!strcmp(pl->line, "ex\tde, hl") || !strcmp(pl->line, "ex\tde,hl"))
+    return(!strchr(what, 'h') || !strchr(what, 'l') || !strchr(what, 'd') || !strchr(what, 'e'));
   if(ISINST(pl->line, "ld\t"))
     {
       if(strstr(strchr(pl->line, ','), what) && strchr(pl->line, ',')[1] != '#' && !(strchr(pl->line, ',')[1] == '(' && strchr(pl->line, ',')[2] == '#') && !(strchr(pl->line, ',')[1] == '(' && strchr(pl->line, ',')[3] != ')' && strchr(pl->line, ',')[4] != ')'))
@@ -233,7 +233,7 @@ z80MightRead(const lineNode *pl, const char *what)
       return FALSE;
     }
 
-  if(strcmp(pl->line, "xor\ta,a") == 0)
+  if(!strcmp(pl->line, "xor\ta, a") || !strcmp(pl->line, "xor\ta,a"))
     return FALSE;
 
   if(ISINST(pl->line, "adc\t") ||
@@ -270,6 +270,12 @@ z80MightRead(const lineNode *pl, const char *what)
     {
       return(argCont(pl->line + 4, what));
     }
+
+  if(ISINST(pl->line, "cpl"))
+    return(!strcmp(what, "a"));
+
+  if(ISINST(pl->line, "di") || ISINST(pl->line, "ei"))
+    return(FALSE);
 
   // Rotate and shift group (todo: rld rrd, maybe sll)
   if(ISINST(pl->line, "rlca") ||
@@ -311,11 +317,30 @@ z80MightRead(const lineNode *pl, const char *what)
   if(ISINST(pl->line, "djnz\t"))
     return(strchr(what, 'b') != 0);
 
+  if(!IS_GB && ISINST(pl->line, "ldir"))
+    return(!strcmp(what, "b") || !strcmp(what, "c") || !strcmp(what, "d") || !strcmp(what, "e") || !strcmp(what, "h") || !strcmp(what, "l"));
+
+  /* TODO: There are out and in variants that do not read bc. */
+  if(!IS_GB && ISINST(pl->line, "out\t"))
+    return(strstr(strchr(pl->line + 4, ','), what) != 0 || !strcmp(what, "b") || !strcmp(what, "c"));
+  if(!IS_GB && ISINST(pl->line, "in\t"))
+    return(strstr(pl->line + 3, what) != 0 || !strcmp(what, "b") || !strcmp(what, "c"));
+
   if(IS_Z180 && ISINST(pl->line, "mlt\t"))
-    return(strstr(pl->line + 4, what) != 0);
+    return(argCont(pl->line + 4, what));
 
   if(IS_Z180 && ISINST(pl->line, "tst\t"))
-    return(strstr(pl->line + 4, what) != 0);
+    return(argCont(pl->line + 4, what));
+
+  if(IS_RAB && ISINST(pl->line, "mul"))
+    return(!strcmp(what, "b") || !strcmp(what, "c") || !strcmp(what, "d") || !strcmp(what, "e"));
+
+  if(IS_RAB && ISINST(pl->line, "bool\t"))
+    return(argCont(pl->line + 5, what));
+
+  /* TODO: Can we know anything about rst? */
+  if(ISINST(pl->line, "rst"))
+    return(TRUE);
 
   return TRUE;
 }
