@@ -660,12 +660,52 @@ replace restart {
 } if notUsed('iy'), notUsed('hl')
 
 replace restart {
-	ld	%1,(hl)
-	or	a,%1
+	ld	iy, #%1+1
+	ld	a, 1 (iy)
+	or	a, 0 (iy)
 } by {
-	or	a,(hl)
-	; peephole 50 used (hl) directly instead of going through %1.
-} if notUsed(%1), notSame(%1 'a')
+	ld	hl, #%1
+	ld	a, (hl)
+	dec	hl
+	or	a, (hl)
+	; peephole 49f used hl instead of iy.
+} if notUsed('iy'), notUsed('hl')
+
+replace restart {
+	ld	iy, #%1
+	add	iy, sp
+	ld	a, 1 (iy)
+	or	a, 0 (iy)
+} by {
+	ld	hl, #%1+1
+	add	hl, sp
+	ld	a, (hl)
+	dec	hl
+	or	a, (hl)
+	; peephole 49f' used hl instead of iy.
+} if notUsed('iy'), notUsed('hl')
+
+replace restart {
+	ld	iy, #%1
+	add	iy, sp
+	bit	%2, %3 (iy)
+} by {
+	ld	hl, #%1+%3
+	add	hl, sp
+	bit	%2, (hl)
+	; peephole 49g used hl instead of iy.
+} if notUsed('iy'), notUsed('hl')
+
+replace restart {
+	ld	iy, #%1
+	add	iy, sp
+	or	a, %2 (iy)
+} by {
+	ld	hl, #%1+%2
+	add	hl, sp
+	or	a, (hl)
+	; peephole 49h used hl instead of iy.
+} if notUsed('iy'), notUsed('hl')
 
 replace restart {
 	ld	c,l
